TODO: DEC PM 4h/4l should toggle jumpscroll on or off (PrivMode_smoothScroll)
TODO: pack rxvt_fatal messages into the exception object
TODO: load must not cache, but global image cache must be cleaned
TODO: provide something like % for easy access for parse_keysym
TODO: description into --help output?
TODO: rxvt -help => (see rxvt-XXX(1))?

	- honour cursorColor also when the cursor style is underline.

9.18 Sun Mar 24 15:33:35 CET 2013
	- fix regression that caused artifacts on resize.

9.17 Fri Mar  1 13:46:08 CET 2013
	- add shade operator in background perl extension.
        - avoid starting or ending the selection in the middle of wide
          characters to avoid artifacts (reproted by Tiago Resende).
	- fix artifacts that may occur if the character in the cursor
	  cell has width > 1 (reported by Tiago Resende).
	- fix regression that causes artifacts on scrolling if
	  saveLines is 0 and the window is resized (reported by Bert
	  Münnich).
	- fix build when perl is enabled and pixbuf and transparency
	  are disabled.

9.16 Thu Dec 27 11:56:43 CET 2012
	- the "so much new stuff your eyes will pop out" release.
        - INCOMPATIBLE CHANGE: renamed urlLauncher resource to url-launcher.
	- fix processing of DEC private mode save sequences (patch by Patrick
	  Hemmer).
        - perl extensions now have their own manpages, installed as urxvt-NAME(1),
          e.g. urxvt-background(1) - see urxvt-extensions(1) for a list.
	- fix disabling of cursor blink with the option-popup menu (based on a
	  patch by Jan Larres).
	- the font height is not augmented anymore when lineSpace is non zero.
	- fix "new pagemap" vs. "delete pagemap" mismatch ([] vs. non-[]),
          as diagnosed by clang.
	- fix height mismatch between active and inactive cursor when
	  lineSpace is non zero (patch by Stanislav Seletskiy).
        - make it compile with LOCAL_X_IS_UNIX again (reported by
          nickfailure@gmail.com).