@@ -30,6 +30,8 @@ TODO: provide something like % for easy access for parse_keysym
 TODO: description into --help output?
 TODO: rxvt -help => (see rxvt-XXX(1))?
 
+	- add support for the set cursor style (DECSCUSR) control
+	  function.
 	- honour cursorColor also when the cursor style is underline.
 
 9.18 Sun Mar 24 15:33:35 CET 2013
